# take3breaths-scrapper

./: .gitignore  pyproject.toml
take3breaths_scrapper/: schema.py  scraper.py  settings.py  types.py  utils.py  validators.py
