[tool.poetry]
name = "take3breaths-scrapper"
version = "0.1.0"
description = ""
authors = ["Jeremi Wielewski <jerwier420@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
exclude =  [ ".venv" ]
venvPath = "."
venv =  ".venv"
